<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#D6DFFF"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layaut_azul"
        android:layout_width="408dp"
        android:layout_height="120dp"
        android:background="#1877f2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFFFFF"
            android:text="Correo Electronico"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/white"
            android:text="Contraseña"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/textView_correo"
            app:layout_constraintStart_toEndOf="@+id/textView_correo"
            app:layout_constraintTop_toTopOf="@+id/textView_correo" />

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="140dp"
            android:layout_height="23dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/txt_contra_bAzul"
            app:layout_constraintStart_toStartOf="@+id/textView_correo"
            app:layout_constraintTop_toBottomOf="@+id/textView_correo" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="140dp"
            android:layout_height="23dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/editText_Email"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/editText_Email"
            tools:text="@string/txt_correo_bAzul" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#FFFEFE"
            android:text="@string/chekbox_sesion"
            android:textColor="#605B5B"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/editText_Email"
            app:layout_constraintTop_toBottomOf="@+id/editText_Email" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Has olvidado tu contraseña?"
            android:textColor="#605B5B"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="@+id/editText_Password"
            app:layout_constraintTop_toTopOf="@+id/checkBox" />

        <Button
            android:id="@+id/button4"
            android:layout_width="75dp"
            android:layout_height="43dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="#1877f2"
            android:text="@string/Buton_Entrar"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="@+id/editText_Password"
            app:layout_constraintStart_toEndOf="@+id/editText_Password"
            app:layout_constraintTop_toTopOf="@+id/editText_Password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="REGISTRATE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layaut_azul" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Es gratis (y lo seguirá siendo)."
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="Nombre:"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Apellidos:"
        app:layout_constraintEnd_toEndOf="@+id/textViewnombre"
        app:layout_constraintTop_toBottomOf="@+id/textViewnombre" />

    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="77dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="Tu direccion de correo electronico:"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/textViewApellido"
        app:layout_constraintTop_toBottomOf="@+id/textViewApellido" />

    <TextView
        android:id="@+id/textViewContra"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:text="Contraseña Nueva:"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/textViewCorreo"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorreo" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Sexo:"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/textViewContra"
        app:layout_constraintTop_toBottomOf="@+id/textViewContra" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="74dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:text="Fecha de nacimiento:"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/textViewSexo"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexo" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_nombre"
        app:layout_constraintBottom_toBottomOf="@+id/textViewnombre"
        app:layout_constraintStart_toEndOf="@+id/textViewnombre"
        app:layout_constraintTop_toTopOf="@+id/textViewnombre"
        app:layout_constraintVertical_bias="0.423" />

    <EditText
        android:id="@+id/txt_ape"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_ape"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApellido"
        app:layout_constraintStart_toStartOf="@+id/txt_nombre"
        app:layout_constraintTop_toTopOf="@+id/textViewApellido" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_email_24"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/txt_correo"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCorreo"
        app:layout_constraintStart_toStartOf="@+id/txt_ape"
        app:layout_constraintTop_toTopOf="@+id/textViewCorreo" />

    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/baseline_password_24"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/txt_contra"
        app:layout_constraintBottom_toBottomOf="@+id/textViewContra"
        app:layout_constraintStart_toStartOf="@+id/txt_correo"
        app:layout_constraintTop_toTopOf="@+id/textViewContra" />

    <Spinner
        android:id="@+id/spinner_Sexo"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSexo"
        app:layout_constraintStart_toStartOf="@+id/txt_pass"
        app:layout_constraintTop_toTopOf="@+id/textViewSexo" />

    <Spinner
        android:id="@+id/spinner_dia"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFecha"
        app:layout_constraintStart_toStartOf="@+id/spinner_Sexo"
        app:layout_constraintTop_toTopOf="@+id/textViewFecha" />

    <Spinner
        android:id="@+id/spinner_Mes"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_dia"
        app:layout_constraintStart_toEndOf="@+id/spinner_dia"
        app:layout_constraintTop_toTopOf="@+id/spinner_dia" />

    <Spinner
        android:id="@+id/spinner_Año"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_Mes"
        app:layout_constraintStart_toEndOf="@+id/spinner_Mes"
        app:layout_constraintTop_toTopOf="@+id/spinner_Mes" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="¿Por que tengo que dar esta información?"
        app:layout_constraintBottom_toTopOf="@+id/button_registrarse"
        app:layout_constraintEnd_toEndOf="@+id/button_registrarse"
        app:layout_constraintStart_toStartOf="@+id/button_registrarse" />

    <Button
        android:id="@+id/button_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        android:backgroundTint="#00a400"
        android:drawableLeft="@drawable/baseline_person_add_24"
        android:text="@string/Buton_Registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>